# devbot

./: .env.template  .flake8  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.rst  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  start_smee.sh  startup_in_docker.sh  tox.ini
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md
devbot/: __init__.py  cli.py  controller.py  devbot.py
devbot/agent/: agent_tool.py  agent_tools.py  base.py  bitbake.py  cache.py  checklist.py  coding.py  core.py  lcel.py  prompts.py  team.py  toolkit.py  tools.py
devbot/repo/: __init__.py  gitee.py  github.py  gitserver.py
docs/: Makefile  conf.py  devbot.repo.rst  devbot.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
tests/: __init__.py  conftest.py  test_agent.py  test_bitbake.py  test_devbot.py  test_gitserver.py  test_lcel.py
tests/data/: __init__.py  agent.py  lcel.py  repo.py
